--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,11 @@
-# Prerequisites
-*.d
+# Directories
+.vs/
+build/
+vendor/
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+# Files
+*.user
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+*.sln
