--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,10 +4,10 @@ Size=239,84
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=1615,19
-Size=305,513
+Pos=1445,19
+Size=475,840
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x0000000A,0
 
 [Window][ViewPort]
 Pos=0,19
@@ -27,23 +27,28 @@ Size=1920,1061
 Collapsed=0
 
 [Window][Assets]
-Pos=1615,534
-Size=305,546
+Pos=0,861
+Size=1920,219
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000006,0
 
 [Window][Viewport]
 Pos=0,19
-Size=1613,1061
+Size=1443,840
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][IntroMessage]
+Pos=563,178
+Size=294,116
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X Selected=0x3969A3C6
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=1613,1061 Split=Y
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1920,884 CentralNode=1 Selected=0x995B0CF8
-    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=1920,175 Selected=0x68EBB02B
-  DockNode    ID=0x0000000A Parent=0x8B93E3BD SizeRef=305,1061 Split=Y Selected=0x9A68760C
-    DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=343,513 Selected=0x9A68760C
-    DockNode  ID=0x00000005 Parent=0x0000000A SizeRef=343,546 Selected=0x7E7D78B8
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=Y Selected=0x3969A3C6
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,840 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1443,1061 Split=Y
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1920,884 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=1920,175 Selected=0x68EBB02B
+    DockNode    ID=0x0000000A Parent=0x00000001 SizeRef=475,1061 Selected=0x9A68760C
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1920,219 Selected=0x7E7D78B8
 
