--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=1445,19
-Size=475,840
+Size=475,837
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -27,14 +27,14 @@ Size=1920,1061
 Collapsed=0
 
 [Window][Assets]
-Pos=0,861
-Size=1920,219
+Pos=0,858
+Size=1920,222
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
 Pos=0,19
-Size=1443,840
+Size=1443,837
 Collapsed=0
 DockId=0x00000002,0
 
@@ -43,12 +43,17 @@ Pos=563,178
 Size=294,116
 Collapsed=0
 
+[Window][Welcome Screen]
+Pos=855,350
+Size=310,108
+Collapsed=0
+
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=Y Selected=0x3969A3C6
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,840 Split=X
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1920,837 Split=X
     DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1443,1061 Split=Y
       DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1920,884 CentralNode=1 Selected=0x995B0CF8
       DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=1920,175 Selected=0x68EBB02B
     DockNode    ID=0x0000000A Parent=0x00000001 SizeRef=475,1061 Selected=0x9A68760C
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1920,219 Selected=0x7E7D78B8
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1920,222 Selected=0x7E7D78B8
 
