Some Small Changes (Bugged)

--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,8 +4,8 @@ Size=239,84
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=1509,19
-Size=411,392
+Pos=1382,19
+Size=538,391
 Collapsed=0
 DockId=0x00000001,0
 
@@ -27,14 +27,14 @@ Size=1920,1061
 Collapsed=0
 
 [Window][Assets]
-Pos=1509,413
-Size=411,482
+Pos=1382,412
+Size=538,410
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Viewport]
 Pos=0,19
-Size=1507,876
+Size=1380,803
 Collapsed=0
 DockId=0x00000002,0
 
@@ -49,8 +49,8 @@ Size=363,452
 Collapsed=0
 
 [Window][Keyframe Timeline]
-Pos=0,897
-Size=1920,183
+Pos=0,824
+Size=1920,256
 Collapsed=0
 DockId=0x00000007,0
 
@@ -61,12 +61,12 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=Y Selected=0x3969A3C6
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1920,876 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1507,1061 Split=Y
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1920,803 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1380,1061 Split=Y
       DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1920,884 CentralNode=1 Selected=0x995B0CF8
       DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=1920,175 Selected=0x68EBB02B
-    DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=411,1061 Split=Y Selected=0x9A68760C
-      DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=475,392 Selected=0x9A68760C
-      DockNode  ID=0x00000005 Parent=0x0000000A SizeRef=475,482 Selected=0x7E7D78B8
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,183 Selected=0xFB80DDC7
+    DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=538,1061 Split=Y Selected=0x7E7D78B8
+      DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=1480,391 Selected=0x9A68760C
+      DockNode  ID=0x00000005 Parent=0x0000000A SizeRef=1480,410 Selected=0x7E7D78B8
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,256 Selected=0xFB80DDC7
 
