--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,8 +4,8 @@ Size=239,84
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=1509,19
-Size=411,392
+Pos=1283,19
+Size=637,893
 Collapsed=0
 DockId=0x00000001,0
 
@@ -13,7 +13,7 @@ DockId=0x00000001,0
 Pos=0,19
 Size=1152,728
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][ViewPort2]
 Pos=0,905
@@ -27,16 +27,16 @@ Size=1920,1061
 Collapsed=0
 
 [Window][Assets]
-Pos=1509,413
-Size=411,482
+Pos=1506,496
+Size=414,584
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Viewport]
 Pos=0,19
-Size=1507,876
+Size=1281,734
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x0000000D,0
 
 [Window][IntroMessage]
 Pos=563,178
@@ -44,29 +44,46 @@ Size=294,116
 Collapsed=0
 
 [Window][Welcome Screen]
-Pos=789,247
+Pos=502,159
 Size=363,452
 Collapsed=0
 
 [Window][Keyframe Timeline]
-Pos=0,897
-Size=1920,183
+Pos=0,755
+Size=1281,157
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000008,0
 
 [Window][Textures]
-Pos=120,207
-Size=129,128
+Pos=0,914
+Size=1920,166
 Collapsed=0
+DockId=0x00000009,0
+
+[Window][Texture Viewer]
+Pos=1547,19
+Size=725,893
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][File Explorer]
+Pos=0,620
+Size=1504,275
+Collapsed=0
+DockId=0x0000000F,0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=Y Selected=0x3969A3C6
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1920,876 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1507,1061 Split=Y
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1920,884 CentralNode=1 Selected=0x995B0CF8
-      DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=1920,175 Selected=0x68EBB02B
-    DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=411,1061 Split=Y Selected=0x9A68760C
-      DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=475,392 Selected=0x9A68760C
-      DockNode  ID=0x00000005 Parent=0x0000000A SizeRef=475,482 Selected=0x7E7D78B8
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1920,183 Selected=0xFB80DDC7
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=Y Selected=0x3969A3C6
+  DockNode          ID=0x00000006 Parent=0x8B93E3BD SizeRef=2272,893 Split=X
+    DockNode        ID=0x00000004 Parent=0x00000006 SizeRef=1281,1061 Split=Y
+      DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=1920,884 Split=Y Selected=0x995B0CF8
+        DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1511,734 Split=Y Selected=0x995B0CF8
+          DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=1504,599 CentralNode=1 Selected=0x995B0CF8
+          DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1504,275 Selected=0x33BD06D4
+        DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1511,157 Selected=0xFB80DDC7
+      DockNode      ID=0x00000003 Parent=0x00000004 SizeRef=1920,175 Selected=0x68EBB02B
+    DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=637,1061 Split=Y Selected=0x9A68760C
+      DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=475,392 Selected=0x9A68760C
+      DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=475,482 Selected=0x7E7D78B8
+  DockNode          ID=0x00000009 Parent=0x8B93E3BD SizeRef=2272,166 Selected=0x5CF1DB40
 
