--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,16 +4,16 @@ Size=239,84
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=1287,19
-Size=633,893
+Pos=1351,19
+Size=569,745
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
 
 [Window][ViewPort]
 Pos=0,19
 Size=1152,728
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000002,0
 
 [Window][ViewPort2]
 Pos=0,905
@@ -34,9 +34,9 @@ DockId=0x00000005,0
 
 [Window][Viewport]
 Pos=0,19
-Size=1285,755
+Size=1349,790
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000007,0
 
 [Window][IntroMessage]
 Pos=563,178
@@ -44,27 +44,27 @@ Size=294,116
 Collapsed=0
 
 [Window][Welcome Screen]
-Pos=639,160
+Pos=673,188
 Size=363,452
 Collapsed=0
 
 [Window][Keyframe Timeline]
-Pos=0,776
-Size=1285,136
+Pos=0,811
+Size=1349,269
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Textures]
-Pos=0,914
-Size=1920,166
+Pos=1351,766
+Size=569,314
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000B,0
 
 [Window][Texture Viewer]
-Pos=1287,19
-Size=633,893
+Pos=1351,19
+Size=569,745
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000006,1
 
 [Window][File Explorer]
 Pos=0,620
@@ -73,17 +73,17 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Docking][Data]
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=Y Selected=0x3969A3C6
-  DockNode          ID=0x00000006 Parent=0x8B93E3BD SizeRef=2272,893 Split=X
-    DockNode        ID=0x00000004 Parent=0x00000006 SizeRef=1285,1061 Split=Y
-      DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=1920,884 Split=Y Selected=0x995B0CF8
-        DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1511,755 Split=Y Selected=0x995B0CF8
-          DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=1504,599 CentralNode=1 Selected=0x995B0CF8
-          DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=1504,275 Selected=0x33BD06D4
-        DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=1511,136 Selected=0xFB80DDC7
-      DockNode      ID=0x00000003 Parent=0x00000004 SizeRef=1920,175 Selected=0x68EBB02B
-    DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=633,1061 Split=Y Selected=0x9A68760C
-      DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=475,392 Selected=0x9A68760C
-      DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=475,482 Selected=0x7E7D78B8
-  DockNode          ID=0x00000009 Parent=0x8B93E3BD SizeRef=2272,166 Selected=0x5CF1DB40
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X Selected=0x3969A3C6
+  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1349,1061 Split=Y
+    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=1920,884 Split=Y Selected=0x995B0CF8
+      DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1504,599 Split=Y Selected=0x995B0CF8
+        DockNode  ID=0x00000007 Parent=0x0000000D SizeRef=1349,790 CentralNode=1 Selected=0x995B0CF8
+        DockNode  ID=0x00000008 Parent=0x0000000D SizeRef=1349,269 Selected=0xFB80DDC7
+      DockNode    ID=0x0000000F Parent=0x00000002 SizeRef=1504,275 Selected=0x33BD06D4
+    DockNode      ID=0x00000003 Parent=0x00000004 SizeRef=1920,175 Selected=0x68EBB02B
+  DockNode        ID=0x0000000A Parent=0x8B93E3BD SizeRef=569,1061 Split=Y Selected=0x9A68760C
+    DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=475,392 Split=Y Selected=0x9A68760C
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=633,745 Selected=0xBCCCB87B
+      DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=633,314 Selected=0x5CF1DB40
+    DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=475,482 Selected=0x7E7D78B8
 
